--- a/Sprint123/WebUI/packages.config
+++ b/Sprint123/WebUI/packages.config
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="bootstrap" version="4.0.0" targetFramework="net451" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net451" />
+  <package id="jQuery" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Moq" version="4.8.2" targetFramework="net451" />
+  <package id="Ninject" version="3.3.4" targetFramework="net451" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net451" />
+  <package id="popper.js" version="1.12.9" targetFramework="net451" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
 </packages>
