--- a/Sprint123/UnitTests/packages.config
+++ b/Sprint123/UnitTests/packages.config
@@ -8,10 +8,11 @@
   <package id="Moq" version="4.8.2" targetFramework="net451" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net451" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net451" />
-  <package id="Ninject" version="3.3.4" targetFramework="net451" />
-  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net451" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net451" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net451" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net451" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net451" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
 </packages>
