--- a/Sprint123/WebUI/packages.config
+++ b/Sprint123/WebUI/packages.config
@@ -2,11 +2,14 @@
 <packages>
   <package id="bootstrap" version="4.0.0" targetFramework="net451" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="jQuery" version="3.0.0" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
