--- a/Sprint123/WebUI/Web.config
+++ b/Sprint123/WebUI/Web.config
@@ -48,6 +48,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+    <contexts>
+      <context type="Domain.Concrete.EFDbContext, Domain">
+        <databaseInitializer type="Domain.Concrete.CinemaInitializer, Domain" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
