--- a/Sprint123/WebUI/WebUI.csproj
+++ b/Sprint123/WebUI/WebUI.csproj
@@ -180,7 +180,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Business_Logic\MovieOverview.cs" />
     <Compile Include="Business_Logic\MovieType.cs" />
-    <Compile Include="Business_Logic\UpcomingFilm.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UpcomingShowController.cs" />
     <Compile Include="Global.asax.cs">
@@ -206,7 +205,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\UpcomingShow\UpcomingShows.cshtml" />
+    <Content Include="Views\UpcomingShow\Upcoming.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
