--- a/Sprint123/UnitTests/UnitTests.csproj
+++ b/Sprint123/UnitTests/UnitTests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservationID.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
