Added age to overview Changed 3d to text Moved back button to header(needs to be removed from first 2 pages) Spacing to order tickets table and max 10 tickets and min 1 ticket

--- a/Sprint123/WebUI/WebUI.csproj
+++ b/Sprint123/WebUI/WebUI.csproj
@@ -136,6 +136,17 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\footer-fixed.css" />
     <Content Include="Content\footer-logo90x30.png" />
+    <Content Include="Content\kijkwijzer-12.png" />
+    <Content Include="Content\kijkwijzer-16.png" />
+    <Content Include="Content\kijkwijzer-6.png" />
+    <Content Include="Content\kijkwijzer-AL.png" />
+    <Content Include="Content\kijkwijzer-discriminatie.png" />
+    <Content Include="Content\kijkwijzer-drugs.png" />
+    <Content Include="Content\kijkwijzer-eng.png" />
+    <Content Include="Content\kijkwijzer-geweld.png" />
+    <Content Include="Content\kijkwijzer-groftaalgebruik.png" />
+    <Content Include="Content\kijkwijzer-seks.png" />
+    <Content Include="Content\kijkwijzer.png" />
     <Content Include="Content\menu.css" />
     <Content Include="Content\my-javascript.js" />
     <Content Include="Content\Site.css" />
