tickers are now correctly added to the database and can be retrieved in the reservation menu

--- a/Sprint123/Domain/Domain.csproj
+++ b/Sprint123/Domain/Domain.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Entities\RoomLayout.cs" />
     <Compile Include="Entities\Seat.cs" />
     <Compile Include="Entities\Show.cs" />
+    <Compile Include="Entities\TempTicket.cs" />
     <Compile Include="Entities\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
