adds email adress to database after order and if checked

--- a/Sprint123/Domain/Domain.csproj
+++ b/Sprint123/Domain/Domain.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IEmailRepository.cs" />
     <Compile Include="Abstract\IMovieOverviewRepository.cs" />
     <Compile Include="Abstract\IRoomRepository.cs" />
     <Compile Include="Abstract\IShowRepository.cs" />
@@ -77,12 +78,14 @@
     <Compile Include="Abstract\ITicketRepository.cs" />
     <Compile Include="Concrete\CinemaInitializer.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
+    <Compile Include="Concrete\EmailRepository.cs" />
     <Compile Include="Concrete\MovieOverviewRepository.cs" />
     <Compile Include="Concrete\RoomRepository.cs" />
     <Compile Include="Concrete\ShowRepository.cs" />
     <Compile Include="Concrete\ShowSeatRepository.cs" />
     <Compile Include="Concrete\TempTicketRepository.cs" />
     <Compile Include="Concrete\TicketRepository.cs" />
+    <Compile Include="Entities\EmailAdress.cs" />
     <Compile Include="Entities\Movie.cs" />
     <Compile Include="Entities\Location.cs" />
     <Compile Include="Entities\Room.cs" />
