caroussel as partial view, filters as separate method, creditcard now long of size 16. fixed test + show all movies button

--- a/Sprint123/WebUI/WebUI.csproj
+++ b/Sprint123/WebUI/WebUI.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Specials\Specials.cshtml" />
     <Content Include="Views\Specials\Ladies.cshtml" />
     <Content Include="Views\Specials\LadiesOrder.cshtml" />
+    <Content Include="Views\UpcomingShow\Caroussel.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
