small fixes, creditcard page, footer and ideal page improvements, carousel with real expected movies.

--- a/Sprint123/WebUI/WebUI.csproj
+++ b/Sprint123/WebUI/WebUI.csproj
@@ -128,8 +128,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\avangersinfinitywar.jpeg" />
     <Content Include="Content\bankier-van-het-verzet-2.jpg" />
     <Content Include="Content\black-panther.jpg" />
+    <Content Include="Content\blue.jpg" />
     <Content Include="Content\bob-de-bouwer.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -168,6 +170,8 @@
     <Content Include="Content\socialmedia_facebook.png" />
     <Content Include="Content\socialmedia_insta.png" />
     <Content Include="Content\socialmedia_twitter.png" />
+    <Content Include="Content\solostarwarsstory.jpg" />
+    <Content Include="Content\special_balloon.png" />
     <Content Include="Content\special_ladies.png" />
     <Content Include="Content\sprite-blue.png" />
     <Content Include="Content\sprite-purple.png" />
